syntax = "proto3";

package user;

// User model
message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
}

// Request messages
message GetUsersRequest {}

message GetUserRequest {
  uint64 id = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
}

message UpdateUserRequest {
  uint64 id = 1;
  optional string username = 2;
  optional string email = 3;
}

message DeleteUserRequest {
  uint64 id = 1;
}

// Response messages
message GetUsersResponse {
  repeated User users = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

// User service definition
service UserService {
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}